worked on add loan break down. about to start api testing . not sure if it will work for the update